--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pyflakes==2.2.0
 Pygments==2.7.2
 pylint==2.6.0
 python-dateutil==2.8.1
+python-dotenv
 python-editor==1.0.4
 requests==2.24.0
 six==1.15.0
